# aero-client

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  __init__.py  api.py  cli.py  client.py  config.py  error.py  example.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  utils.py
.github/workflows/: docs.yml  ingestion-flow.yml
action_inputs/: execute_function.py
aero_client/: __init__.py  api.py  cli.py  config.py  error.py  example.py  jobs.py  utils.py
api/: index.html
docs/: api.md  generate_api.py  index.html  index.md  registering_flows.md
docs/SUMMARY/: index.html
docs/_templates/python/material/: module.html
docs/api/: index.html
docs/cli/: index.html
docs/config/: index.html
docs/error/: index.html
docs/example/: index.html
docs/jobs/: index.html
docs/utils/: index.html
dsaas_client/: __init__.py  api.py  cli.py  example.py  utils.py
examples/: dynamic_synthetic_data.py  register_flow.py  register_function_ex.py
main/: 404.html  index.html  objects.inv
main/_templates/python/material/: module.html.jinja
main/api/: index.html
main/docs/: index.html
main/docs/SUMMARY/: index.html
main/docs/api/: index.html
main/docs/cli/: index.html
main/docs/config/: index.html
main/docs/error/: index.html
main/docs/example/: index.html
main/docs/jobs/: index.html
main/docs/utils/: index.html
main/registering_flows/: index.html
main/search/: search_index.json
main/static/css/: youtube.css
main/static/img/: aero-flow.afphoto
registering_flows/: index.html
scripts/: wastewater_transform.py
search/: search_index.json
tests/: utils_test.py
